src/styles/pages/_files.scss
.files__item {
  position: relative;
  display: block;
  border: 1px dotted black;   
  padding: 1rem;
  color: rgb(106, 106, 122);
  transition: all 200ms ease;    
  text-decoration: none;  
  height: min-content;
  &:visited {    
    color: rgb(106, 106, 122);
    .files__item-title {
      text-decoration: underline;
    }
  }
  &:hover {
    color: blue;  
    .files__item-title {
      text-decoration: underline;
    }
  }
  &::before {
    position: absolute;
    content: "";
    border-top: 2px solid black;
    left: 0;  
    right: 0;
    top: -1px;
  }
}
.files__item-title {
  color: rbga(0,0,0,0.8);
  margin-bottom: 1rem;  
}

